Fix liquid fuel list in melting/alloying/etc including the solid recipe